--- a/WebApp/Views/Account/Login.cshtml
+++ b/WebApp/Views/Account/Login.cshtml
@@ -15,42 +15,46 @@
 
     <div class="animate form login_form">
         <section id="loginForm" class="login_content">
+
+
             <img src="~/Content/images/Logos.png" />
+
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
-            @Html.AntiForgeryToken()
+                @Html.AntiForgeryToken()
 
-            <h1>Login</h1>
-            <br />
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div>
-                @Html.TextBoxFor(m => m.LoginViewModel.Email, new { @class = "form-control", @placeholder = "Email Address" })
-                @Html.ValidationMessageFor(m => m.LoginViewModel.Email, "", new { @class = "text-danger" })
-            </div>
-            <div>
-                @Html.PasswordFor(m => m.LoginViewModel.Password, new { @class = "form-control" , @placeholder= "Password" })
-                @Html.ValidationMessageFor(m => m.LoginViewModel.Password, "", new { @class = "text-danger" })
-            </div>
-            <div>
-                @Html.CheckBoxFor(m => m.LoginViewModel.RememberMe)
-                @Html.LabelFor(m => m.LoginViewModel.RememberMe)
-            </div>
-
-
-            <div>
-                <input type="submit" value="Log in" class="btn btn-primary submit" />
-
+                <h1>Login</h1>
+                <p>@ViewBag.SuccessMessage</p>
                 <br />
-                @Html.ActionLink("Lost your password?", "ForgotPassword")
-            </div>
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div>
+                    @Html.TextBoxFor(m => m.LoginViewModel.Email, new { @class = "form-control", @placeholder = "Email Address" })
+                    @Html.ValidationMessageFor(m => m.LoginViewModel.Email, "", new { @class = "text-danger" })
+                </div>
+                <div>
+                    @Html.PasswordFor(m => m.LoginViewModel.Password, new { @class = "form-control", @placeholder = "Password" })
+                    @Html.ValidationMessageFor(m => m.LoginViewModel.Password, "", new { @class = "text-danger" })
+                </div>
+                <div>
+                    @Html.CheckBoxFor(m => m.LoginViewModel.RememberMe)
+                    @Html.LabelFor(m => m.LoginViewModel.RememberMe)
+                </div>
 
-            <div class="clearfix"></div>
-            <div class="separator">
-                <p class="change_link">
-                    <a href="#signup" class="to_register"> Create Account </a>
-                </p>
+
+                <div>
+                    <input type="submit" value="Log in" class="btn btn-primary submit" />
+
+                    <br />
+                    @Html.ActionLink("Lost your password?", "ForgotPassword")
+                </div>
+
                 <div class="clearfix"></div>
-            </div>
+                <div class="separator">
+                    <p class="change_link">
+                        <a href="#signup" class="to_register"> Create Account </a>
+                    </p>
+                    <div class="clearfix"></div>
+                </div>
 
             }
 
@@ -77,9 +81,9 @@
                 <div>
                     @Html.TextBoxFor(m => m.RegisterViewModel.Email, new { @class = "form-control", @placeholder = "Email Address" })
                 </div>
-                    <div>
-                        @Html.PasswordFor(m => m.RegisterViewModel.Password, new { @class = "form-control", @placeholder = "Password" })
-                    </div>
+                <div>
+                    @Html.PasswordFor(m => m.RegisterViewModel.Password, new { @class = "form-control", @placeholder = "Password" })
+                </div>
                     <div>
                         @Html.PasswordFor(m => m.RegisterViewModel.ConfirmPassword, new { @class = "form-control", @placeholder = "Confirm Password" })
                     </div>
@@ -87,7 +91,8 @@
                         <input type="submit" class="btn btn-primary submit" value="Submit" />
                     </div>
                     <div>
-                        @Html.CheckBox("chkIsPatient", (bool)ViewBag.IsPatient, new { @onchange = "chkChange()" }) <label for="chkIsPatient" id="lblIsPatient">Register as a Patient</label>
+                        @Html.CheckBoxFor(m => m.IsPatient, new { @onChange = "chkChange()", @id = "chkIsPatient" })
+                        <label for="chkIsPatient" id="lblIsPatient">Register as a Patient</label>
                     </div>
 
                     <div class="clearfix"></div>
