commit changes during testing found

--- a/WebApp/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/WebApp/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,13 +1,45 @@
-﻿@{
-    ViewBag.Title = "Forgot Password Confirmation";
-}
+﻿@model WebApp.Models.SecretQuestionModel
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-</hgroup>
-<div>
-    <p>
-        Please check your email to reset your password.
-    </p>
+
+@{
+    ViewBag.Title = "Secrete QA, Forgot Password Confirmation";
+    Layout = "~/Views/Shared/_AccountsLayout.cshtml";
+}
+<div class="login_wrapper">
+
+    <div id="secreteQuestion" class="animate form login_form">
+        <section class="login_content">
+            <img src="~/Content/images/Logos.png" />
+            @using (Html.BeginForm("ForgotPasswordConfirmation", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            {
+                @Html.AntiForgeryToken()
+                <h1>Create Account</h1>
+                @Html.ValidationSummary("", new { @class = "text-danger" })
+                <p class="text-danger">@ViewBag.ErrorMessage</p>
+                <div>
+                    @Html.DisplayFor(m=>m.SecretQuestion)
+
+                    @Html.HiddenFor(m => m.SecretAnswerHidden)
+                    @Html.HiddenFor(m => m.Email)
+
+
+                </div>
+
+                <div>
+                    @Html.TextBoxFor(m => m.SecretAnswer, new { @class = "form-control", @placeholder = "Secret Answer" })
+                </div>
+                
+                <div>
+                        <input type="submit" class="btn btn-primary submit" value="Submit" />
+                </div>
+                    
+            }
+
+
+        </section>
+    </div>
 </div>
-	
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
