--- a/WebApp/Views/Account/ForgotPassword.cshtml
+++ b/WebApp/Views/Account/ForgotPassword.cshtml
@@ -15,14 +15,15 @@
                 @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                 {
                     @Html.AntiForgeryToken()
-                    <h1>Forget Password</h1>
+                    <h1>Forgot Password</h1>
+                    <p class="text-danger">@ViewBag.ErrorMessage</p>
                     <hr />
                     
                     <div>
                         @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder = "Email Address" })
                     </div>
                     <div>
-                        <input type="submit" class="btn btn-primary submit" value="Get New Password" />
+                        <input type="submit" class="btn btn-primary submit" value="submit" />
                     </div>
                     <br />
                     <div class="clearfix"></div>
