--- a/WebApp/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/WebApp/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewBag.Title = "Reset password confirmation";
+    Layout = "~/Views/Shared/_AccountsLayout.cshtml";
 }
 
 <hgroup class="title">
@@ -7,6 +8,6 @@
 </hgroup>
 <div>
     <p>
-        Your password has been reset. Please @Html.ActionLink("click here to log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+        Your password has been reset. Please follow instructions from your email. Please @Html.ActionLink("click here to log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
     </p>
 </div>
