--- a/WebApp/Views/Shared/_LayoutPage.cshtml
+++ b/WebApp/Views/Shared/_LayoutPage.cshtml
@@ -176,13 +176,18 @@
                                     </li>
                                     @*<li><a href="javascript:;">Help</a></li>*@
                                     @*<li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>*@
-                                   
-                                    @using (Html.BeginForm("logoutuser", "Login", FormMethod.Post))
-                                     {
+                                    
+                                    @if (Request.IsAuthenticated)
+                                    {
+                                        using (Html.BeginForm("LogOff", "AdminLogin", FormMethod.Post, new { id = "logoutForm" }))
+                                        {
+                                            @Html.AntiForgeryToken()
                                        @*<li><a class="btn btn-link submit"><i class="fa fa-sign-out pull-right"></i>Log Out</a></li>*@
-                                        <li><input type="submit" class="btn btn-link submit"><i class="fa fa-sign-out pull-right"></i>Log Out</li>
+                                        <li><a href="javascript:document.getElementById('logoutForm').submit()"><i class="fa fa-sign-out pull-right"></i>Log Out</a></li>
+                                            @*<li><input type="submit" class="btn btn-link submit"><i class="fa fa-sign-out pull-right"></i>Log Out</li>*@
                                     }
-                                </ul>
+                                    }
+</ul>
                             </li>
 
                             <li role="presentation" class="dropdown">
