--- a/WebApp/Content/css/style.css
+++ b/WebApp/Content/css/style.css
@@ -40,6 +40,26 @@ a:hover {
 	background: #BC5245;
 }
 
+.nav.side-menu > li.whats_news.current-page,
+.nav.side-menu > li.whats_news.active {
+	border-color: #29e6fc;
+}
+.nav-md li.whats_news ul.nav.child_menu li:after {
+	border-color: #29e6fc; 
+}
+.nav-md li.whats_news ul.nav.child_menu li:before {
+	background: #29e6fc;
+}
+
+
+
+
+
+
+
+
+
+
 .nav.side-menu > li.patient.current-page,
 .nav.side-menu > li.patient.active {
 	border-color: #E5A649;
@@ -86,13 +106,13 @@ a:hover {
 
 .nav.side-menu > li.call_history.current-page,
 .nav.side-menu > li.call_history.active {
-	border-color: #F57B45;
+	border-color: #cb76fb;
 }
 .nav-md li.call_history ul.nav.child_menu li:after {
-	border-color: #F57B45; 
+	border-color: #cb76fb; 
 }
 .nav-md li.call_history ul.nav.child_menu li:before {
-	background: #F57B45;
+	background: #cb76fb;
 }
 /*index-page-style*/
 .profile_details .profile_view.gust {
@@ -318,6 +338,17 @@ line-height: 10px;
 	top: 10px;
 	left: 10px;
 	cursor: pointer;
+}
+
+.popup-heart1 {
+	position: absolute;
+	top: 10px;
+	left: 10px;
+	cursor: pointer;
+	opacity: 0;
+}
+.popup-heart1:focus {
+	opacity: 1;
 }
 
 .popup-circle {
@@ -552,6 +583,7 @@ a:focus .fa.fa-heart {
 
 .nav-sm .navbar.nav_title a span img {
     width: 100%;
+    padding: 7px 11px; 
 }
 
 
@@ -575,6 +607,32 @@ a:focus .fa.fa-heart {
 	top: 10px;
 	left: 20px;
 }
+#toggle_1,
+#toggle_2,
+#toggle_3,
+#toggle_4,
+#toggle_5,
+#toggle_6,
+#toggle_7,
+#toggle_8,
+#toggle_9,
+#toggle_10,
+#toggle_11,
+#toggle_12 {
+	display: none;
+}
+.hrt1 {
+	color: #5A738E;
+	position: absolute;
+	top: 10px;
+	left: 20px;
+	/*display: none;*/
+}
+/*.hrt1:active,
+.hrt1:focus {
+	display: block;
+	z-index: 9;
+}*/
 .crl {
 	color: #5A738E;
 	position: absolute;
@@ -582,16 +640,207 @@ a:focus .fa.fa-heart {
 	right: 20px;	
 }
 
+
+.video_head {
+	background: #3598db;
+	padding: 10px; 
+	color: #fff;
+}
+.video_head h1 {
+	font-size: 20px;
+	margin: 0; 
+}
+.video_head h1 small {
+	float: right;
+	color: #fff;
+	margin-top: 5px;
+}
+.video_sec {
+	position: relative;
+	width: 60%;
+	float: left;
+}
+.video_sec img {
+	border: 1px solid #cecece;
+}
+.video_sec > img {
+	height: 665px;
+}
+.small_img {
+	position: absolute;
+	top: 5%;
+	right: 5%;
+	max-width: 100px;
+	width: 100%;
+}
+.video_his {
+	width: 40%;
+	float: left;
+}
+.video_icon {
+	padding-left: 0;
+	text-align: center;
+	position: absolute;
+	bottom: 30px;
+	right: 33%;
+}
+.video_icon li {
+	display: inline-block;
+	margin-right: 20px;
+}
+.video_icon li:last-child{
+	margin-right: 0;
+}
+.video_icon li a i {	
+	border-radius: 100%;
+	border: 3px solid #0061b2;  
+	font-size: 24px;
+	color: #0061b2;
+	transition: 0.3s;
+}
+.video_icon li a i:hover {
+	background: #0061b2;
+	/*border-color: #fff;*/
+	color: #fff;
+}
+.video_icon li a i.fa-phone {
+	padding: 10px 12px; 
+	color: #fff;
+	background: #fe0000;
+	border-color: #fe0000;
+}
+.video_icon li a i.fa-microphone {
+	padding: 10px 14px; 
+}
+.video_icon li a i.fa-video-camera {
+	padding: 10px; 
+}
+.video_icon li a i.fa-volume-down {
+	padding: 10px 15px; 
+}
+.video_icon li a i.fa-expand {
+	padding: 10px 12px;  
+}
+
+
+
+/*video_side_style*/
+
+/** initial setup **/
+.nano {
+  position : relative;
+  width    : 100%;
+  height   : 100%;
+  overflow : hidden;
+}
+.nano .content {
+  position      : absolute;
+  overflow      : scroll;
+  overflow-x    : hidden;
+  top           : 0;
+  right         : 0;
+  bottom        : 0;
+  left          : 0;
+}
+.nano .content:focus {
+  outline: thin dotted;
+}
+.nano .content::-webkit-scrollbar {
+  visibility: hidden;
+}
+.has-scrollbar .content::-webkit-scrollbar {
+  visibility: visible;
+}
+.nano > .pane {
+  background : rgba(0,0,0,.25);
+  position   : absolute;
+  width      : 10px;
+  right      : 0;
+  top        : 0;
+  bottom     : 0;
+  visibility : hidden\9; /* Target only IE7 and IE8 with this hack */
+  opacity    : .01; 
+  -webkit-transition    : .2s;
+  -moz-transition       : .2s;
+  -o-transition         : .2s;
+  transition            : .2s;
+  -moz-border-radius    : 5px;
+  -webkit-border-radius : 5px;  
+  border-radius         : 5px;
+}
+.nano > .pane > .slider {
+  background: #444;
+  background: rgba(0,0,0,.5);
+  position              : relative;
+  margin                : 0 1px;
+  -moz-border-radius    : 3px;
+  -webkit-border-radius : 3px;  
+  border-radius         : 3px;
+}
+.nano:hover > .pane, .pane.active, .pane.flashed {
+  visibility : visible\9; /* Target only IE7 and IE8 with this hack */
+  opacity    : 0.99;
+}
+
+.nano { height: 472px; }
+.nano .content { padding: 10px; }
+.nano .pane   { background: #888; }
+.nano .slider { background: #111; }
+
+.panel-group .panel {
+	border-radius: 0;
+}
+.panel-group .panel + .panel {
+    margin-top: 0;
+}
+
+.panel-heading .accordion-toggle:after {
+    
+    font-family: 'Glyphicons Halflings';
+    content: "\e114";    
+    float: right;        
+    color: grey;       
+}
+.panel-heading .accordion-toggle.collapsed:after {
+        content: "\e080";   
+}
+
+
+
+
+
+
+
+
+
 /*responsive*/
 
 
-@media (max-width: 1400px) {
+body#video {
+	overflow: hidden;
+}
+
+@media (max-width: 1600px) {
 	.cl1 {
 		left: 30px;
 	}
 
 	.ph1 {
 		right: 30px;
+	}
+	body#video {
+		overflow: hidden;
+	}
+}
+@media (max-width: 1300px) {
+	.video_sec > img {
+	    height: 825px;
+	}
+	.nano {
+	    height: 630px;
+	}
+	.video_icon {
+		right: 25%;
 	}
 }
 
@@ -607,6 +856,7 @@ a:focus .fa.fa-heart {
 		right: 40px;
 	}
 }
+
 @media (max-width: 992px) {
 	.row.green-bg-sec .w-100 {
 		width: 100%;
@@ -622,18 +872,83 @@ a:focus .fa.fa-heart {
 	.ph1 {
 		top: 140px;
 	}
+	.res-img button {
+		margin-right: 0 !important;
+	}
+	.res-img {
+		text-align: center;
+	}
+	.form-horizontal .control-label {
+		text-align: left;
+	}
+	.video_icon {
+		right: 20%;
+	}
 }
 
 @media (max-width: 768px) {
 	.dr_info {
 		max-width: 100%;
 	}
+	.top_nav .navbar-right {
+		width: 75% !important;
+	}
+	.video_sec,.video_his {
+		width: 100%;
+	}
+	.video_sec > img {
+	    height: auto;
+	}
+	.video_icon {
+	    right: 21%;
+	}
+	body#video {
+		overflow: auto;
+	}
+	.nano {
+	   height: 1300px;
+	}
+	.nano .content {
+		overflow-x: scroll;
+	}
 }
 @media (max-width: 480px) {
+	.top_nav .navbar-right {
+		width: 100% !important;
+	}
 	.map-box {
 	    margin-top: 0;
 	}
 	.box-inner {
 		position: static;
 	}
+	ul {
+		padding-left: 0;
+	}
+	.wizard_horizontal ul.wizard_steps li a {
+		font-size: 11px;
+	}
+	.video_icon li {
+		margin-right: 0;
+	}
+	.video_icon {
+		bottom: 5px;
+		right: 5%;
+	}
+	.small_img {
+		max-width: 60px;
+	}
+	.x_panel,ul.bar_tabs > li a {
+		padding: 10px 5px; 
+	}
+	.mail_list_column {
+		border-left: none;
+	}
+	.res-w-input {
+		width: 87% !important;
+	}
+
 }
+
+
+
