naveed 1st push after apis creation

--- a/WebApp/Views/Shared/_PatientLayout.cshtml
+++ b/WebApp/Views/Shared/_PatientLayout.cshtml
@@ -63,7 +63,7 @@
                                     </ul>
                                 </li>
                                 <li class="doctor">
-                                    <a href="see_a_doctor.html"><img src="~/Content/images/icon_doc_search.png" alt="">  &nbsp <span class="menu-txt">See a doctor</span> </a>
+                                    <a href="@Url.Action("SeeDoctor", "SeeDoctor")"><img src="~/Content/images/icon_doc_search.png" alt="">  &nbsp <span class="menu-txt">See a doctor</span> </a>
                                 </li>
                                 <li class="appointment">
                                     <a href="#"><img src="~/Content/images/icon_appointment.png" alt="">  &nbsp <span class="menu-txt">Consult History</span></a>
