--- a/WebApp/Views/Shared/_DoctorLayout.cshtml
+++ b/WebApp/Views/Shared/_DoctorLayout.cshtml
@@ -56,7 +56,7 @@
                                     </ul>
                                 </li>
                                 <li class="doctor">
-                                    <a href="see_a_doctor.html"><img src="~/Content/images/icon_doc_search.png" alt="">  &nbsp <span class="menu-txt">Patients</span> </a>
+                                    <a href="@Url.Action("DoctorTimings", "Doctor")"><img src="~/Content/images/icon_doc_search.png" alt="">  &nbsp <span class="menu-txt">My Timings</span> </a>
                                 </li>
                                 <li class="appointment">
                                     <a href="#"><img src="~/Content/images/icon_appointment.png" alt="">  &nbsp <span class="menu-txt">Consult History</span></a>
@@ -64,21 +64,14 @@
                                         <li><a href="p_call_history.html"> Patient Call History</a></li>
                                     </ul>
                                 </li>
-                                <li class="patient">
-                                    <a href="my_health.html"><img src="~/Content/images/icon_patient_search.png" alt=""> &nbsp <span class="menu-txt">Search Patient</span> </a>
-                                </li>
+                               
                                 <li class="message">
-                                    <a href="#"><img src="~/Content/images/icon_messages.png" alt=""> &nbsp <span class="menu-txt">My Files</span> </a>
+                                    <a href="#"><img src="~/Content/images/icon_messages.png" alt=""> &nbsp <span class="menu-txt">Messages</span> </a>
                                     <ul class="nav child_menu">
                                         <li><a href="file.html">My Files</a></li>
                                     </ul>
                                 </li>
-                                <li class="call_history">
-                                    <a href="#"><img src="~/Content/images/icon_call-history.png" alt="">  &nbsp <span class="menu-txt">My Patiens</span> </a>
-                                    <ul class="nav child_menu">
-                                        <li><a href="#">Dashboard</a></li>
-                                    </ul>
-                                </li>
+                                
                                 <li class="call_history">
                                     <a href="#"><img src="~/Content/images/icon_call-history.png" alt="">  &nbsp <span class="menu-txt">Whats New</span> </a>
                                     <ul class="nav child_menu">
