--- a/WebApp/Content/css/style.css
+++ b/WebApp/Content/css/style.css
@@ -50,16 +50,6 @@ a:hover {
 .nav-md li.whats_news ul.nav.child_menu li:before {
 	background: #29e6fc;
 }
-
-
-
-
-
-
-
-
-
-
 .nav.side-menu > li.patient.current-page,
 .nav.side-menu > li.patient.active {
 	border-color: #E5A649;
@@ -128,13 +118,50 @@ a:hover {
 }
 
 td {
-	vertical-align: middle;
+	vertical-align: middle !important;
 }
 
 .daterangepicker td:focus {
     background-color: #286090;
     color: #fff;
 }
+
+
+
+.appoinment_finsihed {
+
+}
+.appoinment_finsihed-logo {
+	margin: 0 auto; 
+}
+.appoinment_finsihed-user {
+	border-radius: 50%;
+}
+
+.appoinment_finsihed .ratings .fa-star-o,
+.appoinment_finsihed .ratings .fa-star {
+	color: #ffc001;
+	font-size: 24px;
+}
+.appoinment_finsihed .form-group label {
+	text-align: left;
+	display: block;
+}
+/*.appoinment_finsihed .form-group .form-control {
+	border-top: none;
+	border-right: none;
+	border-left: none;
+	box-shadow: none;
+	margin-bottom: 10px;
+}*/
+.appoinment_finsihed .form-group .form-control {
+	margin-bottom: 10px;
+}
+.appoinment_finsihed form {
+	max-width: 500px;
+	margin: 0 auto;
+}
+
 
 /*footer-style*/
 .bdr-l a {
@@ -289,6 +316,10 @@ td {
 .p-t-20 {
 	padding-top: 20px !important; 	
 }
+.p-tb-10 {
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
 .p-tb-30 {
 	padding-top: 30px;
 	padding-bottom: 30px;
@@ -324,6 +355,20 @@ margin-top: 6px !important;}
 .td_span span{
 line-height: 10px;
 }
+
+.border-left {
+	/*background: url(../images/black_bg.jpg) repeat-y;*/
+	border-left: 1px solid #0061b2;
+	height: 77%;
+	position: absolute;
+	top: 20px;
+	width: 1px;
+	left: 16px;
+}
+/*.mrg-l {
+	position: relative;
+	margin-left: -4px;
+}*/
 
 /*.form_wizard .stepContainer {
 	overflow-y: hidden; 
@@ -364,9 +409,6 @@ a:focus .fa.fa-heart {
 .wizard_horizontal ul.wizard_steps li a.selected .step_descr {
 	font-weight: 700;
 }
-/*.according-defalut-close {
-	display: none;
-}*/
 .login_wrapper {
 	max-width: 480px;
 }
@@ -561,14 +603,14 @@ a:focus .fa.fa-heart {
 
 .cl1 {
 	position: absolute;
-	top: 140px;
+	top: 202px;
 	left: 60px;
 	font-size: 16px;
 }
 
 .ph1 {
 	position: absolute;
-	top: 140px;
+	top: 202px;
 	right: 60px;
 	font-size: 16px;
 }
@@ -599,7 +641,21 @@ a:focus .fa.fa-heart {
 
 
 .table-bordered > tbody > tr > td {
-	vertical-align: middle;
+	vertical-align: middle !important;
+}
+.time_btn {
+	position: relative;
+	height: 56px;
+}
+.time-remove span {
+	line-height: 35px;
+}
+.time-remove button {
+	/*position: absolute;
+	top: 10px;
+	right: 10px;*/
+	float: right;
+	margin-bottom: 0;
 }
 .hrt {
 	color: #5A738E;
@@ -639,7 +695,23 @@ a:focus .fa.fa-heart {
 	top: 10px;
 	right: 20px;	
 }
-
+.user-detail {
+	max-width: 250px;
+	margin: 0 auto;
+	color: #375781;
+	height: 100px;
+}
+.img-1 {
+	float: left;
+}
+.img-1 img {
+	border-radius: 50%;
+	max-width: 100px;
+}
+.name-sec {
+	float: left;
+	margin-left: 20px;
+}
 
 .video_head {
 	background: #3598db;
@@ -664,7 +736,7 @@ a:focus .fa.fa-heart {
 	border: 1px solid #cecece;
 }
 .video_sec > img {
-	height: 665px;
+	height: auto;
 }
 .small_img {
 	position: absolute;
@@ -681,7 +753,7 @@ a:focus .fa.fa-heart {
 	padding-left: 0;
 	text-align: center;
 	position: absolute;
-	bottom: 30px;
+	bottom: 20%;
 	right: 33%;
 }
 .video_icon li {
@@ -720,6 +792,333 @@ a:focus .fa.fa-heart {
 }
 .video_icon li a i.fa-expand {
 	padding: 10px 12px;  
+}
+.video-icon {
+	margin-right: 15px;
+}
+.video-icon i {
+	color: #fff;
+	font-size: 18px;
+}
+.messages-sec {
+	display: none;
+}
+.messages-sec {background: #f5f6f8;}
+.inbox-item img {
+	float: left;
+	margin-right: 10px;
+	max-width: 30px;
+	border-radius: 50%;
+}
+/*.inbox-item p {
+	border-radius: 20px;
+	max-width: 100%;
+	padding: 5px 10px;
+	background: #fff;
+	display: inline;
+}
+*/
+.sent-item img {
+	max-width: 30px;
+	border-radius: 50%;
+	float: right;
+}
+/*.sent-item p {
+	border-radius: 20px;
+	border: none;
+	max-width: 100%;
+	display: inline;
+	padding: 5px 10px;
+	background: #3598db;
+	color: #fff;
+	float: right;
+	margin-right: 15px;
+}*/
+
+/* CSS talk bubble */
+.talk-bubble {
+display: inline-block;
+position: relative;
+max-width: 300px;
+height: auto;
+background-color: #fff;
+border-radius: 10px;
+}
+.talktext p {
+	margin-bottom: 0;
+}
+.border{
+  border: 8px solid #666;
+}
+.round{
+  border-radius: 30px;
+	-webkit-border-radius: 30px;
+	-moz-border-radius: 30px;
+
+}
+
+/* Right triangle placed top left flush. */
+.tri-right.border.left-top:before {
+	content: ' ';
+	position: absolute;
+	width: 0;
+	height: 0;
+  left: -40px;
+	right: auto;
+  top: -8px;
+	bottom: auto;
+	border: 32px solid;
+	border-color: #666 transparent transparent transparent;
+}
+.tri-right.left-top:after{
+	content: ' ';
+	position: absolute;
+	width: 0;
+	height: 0;
+  left: -20px;
+	right: auto;
+  top: 0px;
+	bottom: auto;
+	border: 22px solid;
+	border-color: lightyellow transparent transparent transparent;
+}
+
+/* Right triangle, left side slightly down */
+.tri-right.border.left-in:before {
+	content: ' ';
+	position: absolute;
+	width: 0;
+	height: 0;
+  left: -40px;
+	right: auto;
+  top: 30px;
+	bottom: auto;
+	border: 20px solid;
+	border-color: #666 #666 transparent transparent;
+}
+/*.tri-right.left-in:after{
+	content: ' ';
+	position: absolute;
+	width: 0;
+	height: 0;
+  left: -20px;
+	right: auto;
+  top: 38px;
+	bottom: auto;
+	border: 12px solid;
+	border-color: lightyellow lightyellow transparent transparent;
+}*/
+
+/*Right triangle, placed bottom left side slightly in*/
+.tri-right.border.btm-left:before {
+	content: ' ';
+	position: absolute;
+	width: 0;
+	height: 0;
+	left: -8px;
+  right: auto;
+  top: auto;
+	bottom: -40px;
+	border: 32px solid;
+	border-color: transparent transparent transparent #666;
+}
+.tri-right.btm-left:after{
+	content: ' ';
+	position: absolute;
+	width: 0;
+	height: 0;
+	left: 0px;
+  right: auto;
+  top: auto;
+	bottom: -20px;
+	border: 22px solid;
+	border-color: transparent transparent transparent lightyellow;
+}
+
+/*Right triangle, placed bottom left side slightly in*/
+.tri-right.border.btm-left-in:before {
+	content: ' ';
+	position: absolute;
+	width: 0;
+	height: 0;
+	left: 30px;
+  right: auto;
+  top: auto;
+	bottom: -40px;
+	border: 20px solid;
+	border-color: #666 transparent transparent #666;
+}
+.tri-right.btm-left-in:after{
+	content: ' ';
+	position: absolute;
+	width: 0;
+	height: 0;
+	left: 38px;
+  right: auto;
+  top: auto;
+	bottom: -20px;
+	border: 12px solid;
+	border-color: lightyellow transparent transparent lightyellow;
+}
+
+/*Right triangle, placed bottom right side slightly in*/
+.tri-right.border.btm-right-in:before {
+	content: ' ';
+	position: absolute;
+	width: 0;
+	height: 0;
+  left: auto;
+	right: 30px;
+	bottom: -40px;
+	border: 20px solid;
+	border-color: #666 #666 transparent transparent;
+}
+.tri-right.btm-right-in:after{
+	content: ' ';
+	position: absolute;
+	width: 0;
+	height: 0;
+  left: auto;
+	right: 38px;
+	bottom: -20px;
+	border: 12px solid;
+	border-color: lightyellow lightyellow transparent transparent;
+}
+/*
+	left: -8px;
+  right: auto;
+  top: auto;
+	bottom: -40px;
+	border: 32px solid;
+	border-color: transparent transparent transparent #666;
+	left: 0px;
+  right: auto;
+  top: auto;
+	bottom: -20px;
+	border: 22px solid;
+	border-color: transparent transparent transparent lightyellow;
+
+/*Right triangle, placed bottom right side slightly in*/
+.tri-right.border.btm-right:before {
+	content: ' ';
+	position: absolute;
+	width: 0;
+	height: 0;
+  left: auto;
+	right: -8px;
+	bottom: -40px;
+	border: 20px solid;
+	border-color: #666 #666 transparent transparent;
+}
+.tri-right.btm-right:after{
+	content: ' ';
+	position: absolute;
+	width: 0;
+	height: 0;
+  left: auto;
+	right: 0px;
+	bottom: -20px;
+	border: 12px solid;
+	border-color: lightyellow lightyellow transparent transparent;
+}
+
+/* Right triangle, right side slightly down*/
+.tri-right.border.right-in:before {
+	content: ' ';
+	position: absolute;
+	width: 0;
+	height: 0;
+  left: auto;
+	right: -40px;
+  top: 30px;
+	bottom: auto;
+	border: 20px solid;
+	border-color: #666 transparent transparent #666;
+}
+/*.tri-right.right-in:after{
+	content: ' ';
+	position: absolute;
+	width: 0;
+	height: 0;
+  left: auto;
+	right: -20px;
+  top: 38px;
+	bottom: auto;
+	border: 12px solid;
+	border-color: lightyellow transparent transparent lightyellow;
+}*/
+.margin-r {
+	margin-right: 5px;
+}
+
+/* Right triangle placed top right flush. */
+.tri-right.border.right-top:before {
+	content: ' ';
+	position: absolute;
+	width: 0;
+	height: 0;
+  left: auto;
+	right: -40px;
+  top: -8px;
+	bottom: auto;
+	border: 32px solid;
+	border-color: #666 transparent transparent transparent;
+}
+.tri-right.right-top:after{
+	content: ' ';
+	position: absolute;
+	width: 0;
+	height: 0;
+  left: auto;
+	right: -20px;
+  top: 0px;
+	bottom: auto;
+	border: 20px solid;
+	border-color: lightyellow transparent transparent transparent;
+}
+
+/* talk bubble contents */
+.talktext{
+  padding: 10px;
+	text-align: left;
+  line-height: 1.5em;
+}
+.talktext p{
+  /* remove webkit p margins */
+  -webkit-margin-before: 0em;
+  -webkit-margin-after: 0em;
+}
+
+
+#messages-sec {
+	position: relative;
+}
+.message-textarea {
+	position: absolute;
+	bottom: 10px;
+	right: 0;
+	left: 0;
+}
+.message-textarea textarea {
+	resize: none;
+	border: none;
+	width: 100%;
+	padding-right: 65px;
+}
+.message-textarea textarea:focus {
+	border: none;
+	outline: none;
+}
+.messages-send {
+position: absolute;
+bottom: 7px;
+right: 10px;
+font-size: 24px;
+color: #fff;
+background: #3598db;
+border-radius: 5px;
+padding: 10px;
+cursor: pointer;
 }
 
 
@@ -782,6 +1181,10 @@ a:focus .fa.fa-heart {
   opacity    : 0.99;
 }
 
+.messages-sec.nano {
+	height: 665px;
+	padding-bottom: 80px;
+}
 .nano { height: 472px; }
 .nano .content { padding: 10px; }
 .nano .pane   { background: #888; }
@@ -794,7 +1197,7 @@ a:focus .fa.fa-heart {
     margin-top: 0;
 }
 
-.panel-heading .accordion-toggle:after {
+/*.panel-heading .accordion-toggle:after {
     
     font-family: 'Glyphicons Halflings';
     content: "\e114";    
@@ -803,12 +1206,80 @@ a:focus .fa.fa-heart {
 }
 .panel-heading .accordion-toggle.collapsed:after {
         content: "\e080";   
+}*/
+/*accordion*/
+.border-top {
+	border-top: 1px solid #cecece;
+	margin-top: 20px;
+}
+.penal-style {
+	border-radius: 0 !important;
+	margin-top: 0 !important;
+	border-bottom: 1px solid #cecece;
+	border-right: 1px solid #cecece;
+	border-top: none;
+	border-left: 1px solid #cecece;
+	box-shadow: none;
+}
+.advance-search .glyphicon-chevron-right{
+	display: block;
+	padding: 7px;
+}
+.icons-pos {
+	float: right;
+	font-size: 14px;
+}
+.glyphicon-chevron-right {
+	display: none;
+}
+.collapsed .glyphicon-chevron-down {
+	display: none;
+}
+.collapsed .glyphicon-chevron-right {
+	display: block;
 }
 
 
 
-
-
+.input-red {
+	border-color: red;
+}
+.form-group {
+	position: relative;
+}
+.error {
+	position: absolute !important;
+	top: -24px;
+	right: -11px;
+	padding: 3px 10px;
+	color: #CE5454;
+	border-radius: 3px 4px 4px 3px;
+	/*background-color: #CE5454;*/
+	max-width: 170px;
+	white-space: pre;
+	position: relative;
+	z-index: 1;
+	transition: 0.15s ease-out;
+}
+/*.img-preview.preview-lg img {
+	width: 100% !important;
+	max-width: 100% !important;
+}
+.cropper-crop-box {
+	width: 100% !important;
+	max-width: 600px !important;
+}*/
+.cropper-container.cropper-bg {
+	width: 100% !important;
+	height: auto !important;
+}
+.cropper-crop-box {
+	width: 128px !important;
+	height: 128px !important;
+}
+body#video {
+	overflow: hidden;
+}
 
 
 
@@ -816,9 +1287,6 @@ a:focus .fa.fa-heart {
 /*responsive*/
 
 
-body#video {
-	overflow: hidden;
-}
 
 @media (max-width: 1600px) {
 	.cl1 {
@@ -828,19 +1296,29 @@ body#video {
 	.ph1 {
 		right: 30px;
 	}
-	body#video {
-		overflow: hidden;
-	}
+	
 }
 @media (max-width: 1300px) {
 	.video_sec > img {
-	    height: 825px;
+	    height: auto;
 	}
 	.nano {
 	    height: 630px;
 	}
 	.video_icon {
 		right: 25%;
+	}
+	.dropdown-menu {
+		min-width: 90px;
+	}
+	.cl1 {
+		left: 17px;
+		top: 242px;
+	}
+
+	.ph1 {
+		top: 242px;
+		right: 17px;
 	}
 }
 
@@ -849,12 +1327,15 @@ body#video {
 		width: auto;
 	}
 	.cl1 {
-		left: 40px;
+		left: 50px;
+		top: 202px;
 	}
 
 	.ph1 {
-		right: 40px;
+		top: 202px;
+		right: 50px;
 	}
+
 }
 
 @media (max-width: 992px) {
@@ -864,13 +1345,6 @@ body#video {
 	.dr_info {
 		position: static;
 		margin: 0 auto 25px;
-	}
-	.cl1 {
-		top: 140px;
-	}
-
-	.ph1 {
-		top: 140px;
 	}
 	.res-img button {
 		margin-right: 0 !important;
@@ -902,14 +1376,19 @@ body#video {
 	.video_icon {
 	    right: 21%;
 	}
-	body#video {
-		overflow: auto;
-	}
+	
 	.nano {
 	   height: 1300px;
 	}
 	.nano .content {
 		overflow-x: scroll;
+	}
+	.messages-send {
+		bottom: 3px;
+		padding: 5px;
+	}
+	body#video {
+		overflow: auto;
 	}
 }
 @media (max-width: 480px) {
