--- a/WebApp/Content/css/style.css
+++ b/WebApp/Content/css/style.css
@@ -1429,5 +1429,21 @@ body#video {
 
 }
 
+.loader {
+    -moz-border-bottom-colors: none;
+    -moz-border-left-colors: none;
+    -moz-border-right-colors: none;
+    -moz-border-top-colors: none;
+    animation: 2s linear 0s normal none infinite running spin;
+    border-color: #fe0000 #0061b2 #0061b2;
+    border-image: none;
+    border-radius: 50%;
+    border-style: solid;
+    border-width: 5px;
+    height: 40px;
+    margin: 250px auto;
+    width: 40px;
+}
+
 
 
